k8s-efk-stack/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: efk
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.hasti.co
    http:
      paths:
      - backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - elasticsearch.hasti.co
    secretName: hasti-tls
